# OpenMem

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
benchmarks/: __init__.py  __main__.py  conftest.py  display.py  metrics.py  run_agent_benchmark.py  run_benchmark.py  runner.py  test_benchmarks.py
benchmarks/adapters/: __init__.py  base.py  bm25_only_adapter.py  chromadb_adapter.py  file_adapter.py  mem0_adapter.py  openmem_adapter.py
benchmarks/agent/: __init__.py  display.py  harness.py  judge.py  runner.py  scenarios.py
benchmarks/scenarios/: scenarios.py
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/servers/: formatting.py  openmem_server.py
plugin/skills/recall/: SKILL.md
plugin/skills/status/: SKILL.md
plugin/skills/store/: SKILL.md
src/openmem/: __init__.py  _formatting.py  activation.py  cli.py  conflict.py  engine.py  mcp_server.py  models.py  scoring.py  store.py
src/openmem/ui/: app.py
src/openmem/ui/static/: app.js  index.html  style.css
tests/: test_activation.py  test_engine.py  test_scoring.py  test_store.py
web/: docusaurus.config.ts  package-lock.json  sidebars.ts
web/docs/: api.md  claude-code.md  configuration.md  integration.md  intro.md  quickstart.md  retrieval.md  web-ui.md
web/src/css/: custom.css
web/src/pages/: index.module.css  index.tsx
