[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openmem"
version = "0.1.0"
description = "Cognitive memory engine for AI agents — human-inspired retrieval via activation, competition, and reconstruction"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/openmem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
