[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openmem-engine"
version = "0.4.0"
description = "Cognitive memory engine for AI agents — human-inspired retrieval via activation, competition, and reconstruction"
license = "MIT"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "OpenMem" }]
keywords = ["memory", "ai", "agents", "llm", "cognitive", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["mcp>=1.0"]

[project.scripts]
openmem-engine = "openmem.cli:main"

[project.urls]
Homepage = "https://github.com/dunkinfrunkin/OpenMem"
Documentation = "https://dunkinfrunkin.github.io/OpenMem/"
Repository = "https://github.com/dunkinfrunkin/OpenMem"
Issues = "https://github.com/dunkinfrunkin/OpenMem/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/openmem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
